--- a/health/app/src/main/AndroidManifest.xml
+++ b/health/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     
     <!-- Camera permissions -->
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.flash" />
     
