--- a/health/build.gradle
+++ b/health/build.gradle
@@ -1,30 +1,26 @@
 buildscript {
     ext {
-        kotlin_version = '1.9.0'
-        compose_version = '1.5.0'
-        compose_compiler_version = '1.5.0'
+        kotlin_version = '1.9.22'
+        compose_version = '1.5.4'
+        compose_compiler_version = '1.5.8'
         lifecycle_version = '2.6.2'
-        room_version = '2.6.0'
+        room_version = '2.6.1'
         coroutines_version = '1.7.3'
         camerax_version = '1.3.0'
+        hilt_version = '2.48.1'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.1.2'
+        classpath 'com.android.tools.build:gradle:8.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+// Sử dụng Delete task hiện đại
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDirectory
 } 
