--- a/health/gradle.properties
+++ b/health/gradle.properties
@@ -1,7 +1,14 @@
 # Project-wide Gradle settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
 kotlin.code.style=official
 org.gradle.parallel=true
-android.nonTransitiveRClass=true 
+android.nonTransitiveRClass=true
+org.gradle.configureondemand=true
+org.gradle.caching=true
+# Kotlin code style for this project: "official" or "obsolete":
+kotlin.incremental=true
+kapt.incremental.apt=true
+# Allow Gradle to use up to 4 workers
+org.gradle.workers.max=4
